--- a/html/src/com/dnk/libgdx/sample/template/GdxDefinition.gwt.xml
+++ b/html/src/com/dnk/libgdx/sample/template/GdxDefinition.gwt.xml
@@ -4,8 +4,14 @@
 	<inherits name='com.badlogic.gdx.backends.gdx_backends_gwt' />
 	<inherits name='com.badlogic.gdx.physics.box2d.box2d-gwt' />
 
+	<inherits name='asset_manager' />
+	<inherits name='input_handlers' />
+	<inherits name='renderers' />
+	<inherits name='screens' />
+	<inherits name='worlds' />
 	<inherits name='dnkLibgdxSampleTemplate' />
 	<entry-point class='com.dnk.libgdx.sample.template.client.HtmlLauncher' />
-	
-	<set-configuration-property name="gdx.assetpath" value="../android/assets" />
+
+	<set-configuration-property name="gdx.assetpath"
+		value="../android/assets" />
 </module>
